compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_34.kt
class Foo<T>

class Bar<T> {
    fun <S : T> takeFoo(foo: Foo<in S>) {}
}

class Out<out P>

interface A<K>
class B : A<Int>

fun <K : Out<A<String>>> main() {
    val foo = Foo<K>()
    Bar<Out<B>>().<!INFERRED_TYPE_VARIABLE_INTO_EMPTY_INTERSECTION_WARNING!>takeFoo<!>(foo) // error in 1.3.72, no error in 1.4.31
}
